--- a/index.html
+++ b/index.html
@@ -25,24 +25,17 @@
 			<h3 id="elem">Time Remaining: </h3>
 		</div>
 		<div>
-			<h2>Question</h2>
+			<h2 id="newQ">Question</h2>
 		</div>
+ 	
+		<h3 class="choice" data-value="0"></h3>
 
-		<div class="answer">
-			<h3>answer1</h3>
-		</div>
+		<h3 class="choice" data-value="1"></h3>
 
-		<div class="answer">
-			<h3>answer2</h3>
-		</div>
+		<h3 class="choice" data-value="2"></h3>
 
-		<div class="answer">
-			<h3>answer3</h3>
-		</div>
+		<h3 class="choice" data-value="3"></h3>
 
-		<div class="answer">
-			<h3>answer4</h3>
-		</div>
 	</div>
 
 	<!-- answer page -->
@@ -50,13 +43,30 @@
 		<h1 class="page-header">Game of Trivia</h1>
 		
 		<div>
-			<h3>Right/wrong answer</h3>
+			<h3 id="rightWrong"></h3>
 		</div>
+
 		<div>
-			<h2>real answer</h2>
+			<h2 id="rAnswer"></h2>
+
+			<iframe id="video" width="500" height="281.25" src="#" frameborder="0" allowfullscreen></iframe>
+		</div>
+	</div>
+
+	<!-- Game over screen to tally scores and have a restart button -->
+	<div class="wrapper gameOver">
+		<h1 class="page-header">Game of Trivia</h1>
+
+		<div>
+			<h2 id="right"></h2>
+			<h2 id="unanswered"></h2>
+			<h2 id="wrong"></h2>
 		</div>
 
-
+		<div>
+			<h1>Game Over</h1>
+			<button class="btn btn-primary">Start Over?</button>
+		</div>
 	</div>
 
 </body>
